--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "guillim",
   "license": "MIT",
   "dependencies": {
+    "@wetransfer/js-sdk": "^1.1.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "json2csv": "^4.3.3",
