--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.16.3",
     "json2csv": "^4.3.3",
     "moment": "^2.24.0",
-    "mongodb": "^2.2.16"
+    "mongodb": "^2.2.16",
+    "nodemailer": "^5.1.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
