--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@wetransfer/js-sdk": "^1.1.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "fs-extra": "^7.0.1",
     "json2csv": "^4.3.3",
     "moment": "^2.24.0",
     "mongodb": "^2.2.16",
