--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "license": "MIT",
   "dependencies": {
     "@wetransfer/js-sdk": "^1.1.0",
+    "JSONStream": "^1.3.5",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "fs-extra": "^7.0.1",
     "json2csv": "^4.3.3",
     "moment": "^2.24.0",
     "mongodb": "^2.2.16",
-    "nodemailer": "^5.1.1"
+    "nodemailer": "^5.1.1",
+    "through2-filter": "^3.0.0",
+    "through2-map": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
