--- a/docker-compose-api.yml
+++ b/docker-compose-api.yml
@@ -10,6 +10,8 @@ services:
     restart: always
     ports:
       - "8000:8000"
+    volumes:
+      - ./app/tmp:/app/app/tmp
 networks:
   default:
     external:
