--- a/docker-compose-api.yml
+++ b/docker-compose-api.yml
@@ -12,6 +12,8 @@ services:
       - "8000:8000"
     volumes:
       - ./app/tmp:/app/app/tmp
+    mem_limit: 500000000
+    memswap_limit: 6000000000
 networks:
   default:
     external:
