--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "moment": "^2.24.0",
     "mongodb": "^2.2.16",
     "nodemailer": "^5.1.1",
+    "pg": "^8.0.2",
+    "pg-query-stream": "^3.0.6",
     "through2-filter": "^3.0.0",
     "through2-map": "^3.0.0"
   },
